[project]
name = "reztract"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.3",
    "langchain>=0.2.1",
    "langchain-community>=0.2.1",
    "langchain-experimental>=0.0.59",
    "kor>=1.0.1",
    "polars[all]>=0.20.30",
    "unstructured[all-docs]>=0.14.3",
    "nltk>=3.8.1",
    "watchfiles>=0.22.0",
    "streamlit>=1.35.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reztract"]
